salesforce/force-app/main/default/objects/Integration_Status__c/Integration_Status__c.object-meta.xml
<CustomObject>
    <description>Stores MuleSoft integration status records for processing state, retries, record references, and troubleshooting.</description>
    <label>Integration Status</label>
    <nameField>
        <displayFormat>IS-{000000}</displayFormat>
        <label>Integration Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>