salesforce/force-app/main/default/objects/Integration_Status__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <description>Name of the application creating the record.</description>
    <label>Application Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>