salesforce/force-app/main/default/objects/Integration_Status__c/fields/Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Channel_Id__c</fullName>
    <description>Identifier of the channel if one is used in the process.</description>
    <label>Channel Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>