salesforce/force-app/main/default/objects/Integration_Status__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>MuleSoft correlationId used to identify requests and logs across applications.</description>
    <externalId>true</externalId>
    <label>Correlation Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>