salesforce/force-app/main/default/objects/Integration_Status__c/fields/Data_Target__c.field-meta.xml
<CustomField>
    <fullName>Data_Target__c</fullName>
    <description>System where the data in the integration was going.</description>
    <label>Data Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>