salesforce/force-app/main/default/objects/Integration_Status__c/fields/Data_Url__c.field-meta.xml
<CustomField>
    <fullName>Data_Url__c</fullName>
    <description>URL of the data used in the integration.</description>
    <label>Data Url</label>
    <type>Url</type>
</CustomField>