salesforce/force-app/main/default/objects/Integration_Status__c/fields/Failed_Count__c.field-meta.xml
<CustomField>
    <fullName>Failed_Count__c</fullName>
    <description>Number of records that failed in a batch or multi-record integration.</description>
    <label>Failed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>