salesforce/force-app/main/default/objects/Integration_Status__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message describing the record, either a process state descriptor or the error description.</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>