salesforce/force-app/main/default/objects/Integration_Status__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Platform that created the record.</description>
    <label>Platform</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>