salesforce/force-app/main/default/objects/Integration_Status__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <description>Name of the business process used in the integration.</description>
    <label>Process Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>