salesforce/force-app/main/default/objects/Integration_Status__c/fields/Processed_Count__c.field-meta.xml
<CustomField>
    <fullName>Processed_Count__c</fullName>
    <description>Number of records successfully processed in a batch or multi-record integration.</description>
    <label>Processed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>