salesforce/force-app/main/default/objects/Integration_Status__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Record ID of the related record outside Salesforce, useful for troubleshooting and support.</description>
    <externalId>true</externalId>
    <label>Related Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>