salesforce/force-app/main/default/objects/Integration_Status__c/fields/Replay_Id__c.field-meta.xml
<CustomField>
    <fullName>Replay_Id__c</fullName>
    <description>Replay ID or event ID used for event-based integration.</description>
    <label>Replay Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>