salesforce/force-app/main/default/objects/Integration_Status__c/fields/Retry_Delay__c.field-meta.xml
<CustomField>
    <fullName>Retry_Delay__c</fullName>
    <description>Delay between retries.</description>
    <label>Retry Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>