salesforce/force-app/main/default/objects/Integration_Status__c/fields/Retry_Delay_Unit__c.field-meta.xml
<CustomField>
    <fullName>Retry_Delay_Unit__c</fullName>
    <description>Unit of time for the retry delay.</description>
    <label>Retry Delay Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>