salesforce/force-app/main/default/objects/Integration_Status__c/fields/Salesforce_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Record_Id__c</fullName>
    <description>Salesforce record ID for the record used in the integration.</description>
    <label>Salesforce Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>