salesforce/force-app/main/default/objects/Integration_Status__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the integration when the record was created.</description>
    <label>Status</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>