salesforce/force-app/main/default/objects/Integration_Status__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of integration, such as REST, Event, Schedule, Platform Event, or CDC Event.</description>
    <label>Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>